don't install rustfmt with --force option, add cargo-deb

--- a/Dockerfile.jinja2
+++ b/Dockerfile.jinja2
@@ -32,4 +32,5 @@ RUN     curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain ${RUSTU
         cargo --version; \
         rustc --version;
 
-RUN     cargo install --force rustfmt;
+RUN     cargo install rustfmt;
+RUN     cargo install cargo-deb;
