Remove unnecessary rm from Dockerfile
All the official Debian and Ubuntu images have deb-file caching disabled by default, therefore the `rm -rf /var/cache/apt/archive/*.deb` is not needed.

--- a/Dockerfile.jinja2
+++ b/Dockerfile.jinja2
@@ -26,8 +26,7 @@ RUN set -eux; \
         liblzma-dev \
         pkg-config \
         ; \
-        rm -rf /var/lib/apt/lists/*; \
-        rm -rf /var/cache/apt/archive/*.deb;
+        rm -rf /var/lib/apt/lists/*;
 
 RUN     curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain ${RUSTUP_TOOLCHAIN}; \
         rustup --version; \
